--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,31 @@
   </head>
 
   <body>
+    <header>
+      <!--div class="container">
+        <div class="row"-->
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="collapse navbar-collapse" id="Navber">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">ホーム</a>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "イベント", events_path, {class:"nav-link"} %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "恐怖動画", movies_path, {class:"nav-link"} %>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">心霊体験</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        <!--/div>
+      </div-->
+    </header>
+
     <% if user_signed_in? %>
       <%= link_to "新規投稿", new_event_path %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
