--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
                   <%= link_to "恐怖動画", movies_path, {class:"nav-link"} %>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">心霊体験</a>
+                  <%= link_to "心霊体験", experiences_path, {class:"nav-link"} %>
                 </li>
               </ul>
             </div>
