--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="Navber">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="#">ホーム</a>
+                  <%= link_to "トップ", maps_path, {class:"nav-link"} %>
                 </li>
                 <li class="nav-item">
                   <%= link_to "イベント", events_path, {class:"nav-link"} %>
