--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,48 +7,50 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
     <header>
-      <!--div class="container">
-        <div class="row"-->
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="collapse navbar-collapse" id="Navber">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item">
-                  <%= link_to "トップ", maps_path, {class:"nav-link"} %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to "イベント", events_path, {class:"nav-link"} %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to "恐怖動画", movies_path, {class:"nav-link"} %>
-                </li>
-                <li class="nav-item">
-                  <%= link_to "心霊体験", experiences_path, {class:"nav-link"} %>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        <!--/div>
-      </div-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">
+        <img src="/assets/下あご付きドクロアイコン.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+        みんなでオカルト
+        </a>
+
+        <div class="collapse navbar-collapse" id="Navber">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <%= link_to "トップ", maps_path, {class:"nav-link"} %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "イベント", events_path, {class:"nav-link"} %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "恐怖動画", movies_path, {class:"nav-link"} %>
+            </li>
+            <li class="nav-item">
+              <%= link_to "心霊体験", experiences_path, {class:"nav-link"} %>
+            </li>
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <% if user_signed_in? %>
+              <%= link_to "マイページ", users_path %>
+              <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+            <% else %>
+              <%= link_to "新規登録", new_user_registration_path %>
+              <%= link_to "ログイン", new_user_session_path %>
+            <% end %>
+            <% if notice %>
+              <p class="alert alert-notice"><%= notice %></p>
+            <% end %>
+            <% if alert %>
+              <p class="alert alert-error"><%= alert %></p>
+            <% end %>
+          </form>
+        </div>
+      </nav>
     </header>
-
-    <% if user_signed_in? %>
-      <%= link_to "新規投稿", new_event_path %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "新規登録", new_user_registration_path %>
-      <%= link_to "ログイン", new_user_session_path %>
-    <% end %>
-
-    <% if notice %>
-      <p class="alert alert-notice"><%= notice %></p>
-    <% end %>
-    <% if alert %>
-      <p class="alert alert-error"><%= alert %></p>
-    <% end %>
     <%= yield %>
   </body>
 </html>
