--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+
+<h1>マイページ</h1>
+<table>
+  <tr>
+    <th>名前</th>
+    <th>メールアドレス</th>
+  </tr>
+  <% @users.each do |user| %>
+    <tr>
+      <% if user == current_user %>
+        <td><%= user.name %></td>
+        <td><%= user.email %></td>
+        <td><%= link_to "編集", edit_user_path(user.id) %></td>
+      <% end %>
+    </tr>
+  <% end %>
+</table>
