--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,9 @@
     <% if alert %>
       <p class="alert alert-error"><%= alert %></p>
     <% end %>
+    <footer class="fixed-bottom">
+      footer
+    </footer>
     <%= yield %>
   </body>
 </html>
