--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,8 +6,12 @@
   </tr>
 <% @events.each do |event| %>
   <tr>
+    <td class="event_icon_index">
+        <%= image_tag(event.icon.url) if event.icon && event.icon.url %>
+    </td>
     <td><%= event.title %></td>
-    <td><%= event.content %></td>
+    <td><%= event.address %></td>
+    <td><%= event.day_time_at %></td>
     <td><%= link_to '詳細', event_path(event.id) %></td>
     <td><%= link_to "編集", edit_event_path(event.id) %></td>
     <td><%= link_to '削除', event_path(event.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
