--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,25 +1,14 @@
 <h1>動画一覧</h1>
-<table>
-  <tr>
-    <th>タイトル</th>
-    <th>内容</th>
-    <th>動画</th>
-  </tr>
-<% @movies.each do |movie| %>
-  <tr>
-    <td><%= movie.title %></td>
-    <td><%= movie.content %></td>
-    <% if movie.icon? %>
-      <% if movie.icon.file.content_type.include?('image/') %>
-        <td><%= image_tag movie.icon.url %></td>
-      <% else %>
-        <td><%= video_tag movie.icon.url, width: "30%", height: "30%",
-                      controls: true, autobuffer: true %></td>
+<div class="container">
+  <div class="row">
+    <div class="movie_index">
+      <% @movies.each do |movie| %>
+      <div class="each_movie col-xs-12 col-md-6 col-lg-4">
+        <%= video_tag movie.icon.url, controls: true, autobuffer: true %>
+        <%= link_to movie.title, movie_path(movie.id) %>
+        <div><%= movie.user.name %></div>
+      </div>
       <% end %>
-    <% end %>
-    <td><%= link_to '詳細', movie_path(movie.id) %></td>
-    <td><%= link_to "編集", edit_movie_path(movie.id) %></td>
-    <td><%= link_to '削除', movie_path(movie.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
-  </tr>
-<% end %>
-</table>
+    </div>
+  </div>
+</div>
