--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,30 +1,93 @@
-
-<h1>マイページ</h1>
-<table>
-  <tr>
-    <th></th>
-    <th>名前</th>
-    <th>メールアドレス</th>
-    <th>年齢</th>
-    <th>性別</th>
-    <th>住所</th>
-    <th>携帯番号</th>
-    <th>自己紹介</th>
-    <th></th>
-  </tr>
-  <% @users.each do |user| %>
-    <tr>
+<div class="container">
+  <div class="row">
+    <% @users.each do |user| %>
       <% if user == current_user %>
-        <td><%= image_tag(user.icon.url) %></td>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.birthed_at %></td>
-        <td><%= user.sex %></td>
-        <td><%= user.address %></td>
-        <td><%= user.mobile_number %></td>
-        <td><%= user.introduction %></td>
-        <td><%= link_to "編集", edit_user_path(user.id) %></td>
+      <p>プロフィール</p>
+      <%= link_to "編集", edit_user_path(user.id) %>
+        <div class="user_index col-lg-12">
+          <div class="col-xs-12 col-md-4">
+            <%= image_tag(user.icon.url) if user.icon && user.icon.url %>
+          </div>
+          <div class="user_table">
+            <table>
+              <tr>
+                <th>名前</th><td><%= user.name %></td>
+              </tr>
+              <tr>
+                <th>年齢</th><td><%= user.birthed_at %></td>
+              </tr>
+              <tr>
+                <th>性別</th><td><%= user.sex %></td>
+              </tr>
+              <tr>
+                <th>メールアドレス</th><td><%= user.email %></td>
+              </tr>
+              <tr>
+                <th>住所</th><td><%= user.address %></td>
+              </tr>
+              <tr>
+                <th>携帯番号</th><td><%= user.mobile_number %></td>
+              </tr>
+              <tr>
+                <th>自己紹介</th><td><%= user.introduction %></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+          <% user.events.each do |event| %>
+          <p>投稿イベント</p>
+          <%= link_to "編集", edit_event_path(event.id) %>
+          <div class="user_index_event col-lg-12">
+            <div class="col-xs-12 col-md-4">
+              <%= image_tag(event.icon.url) if event.icon && event.icon.url %>
+            </div>
+            <div class="user_table">
+              <table>
+                <tr>
+                  <th>タイトル</th><td><%= event.title %></td>
+                </tr>
+                <tr>
+                  <th>開催地</th><td><%= event.address %></td>
+                </tr>
+                <tr>
+                  <th>開催日時</th><td><%= event.day_time_at %></td>
+                </tr>
+                <tr>
+                  <th>催行人数</th><td><%= event.participant_number %></td>
+                </tr>
+                <tr>
+                  <th>開催概要</th><td><%= event.outline %></td>
+                </tr>
+                <tr>
+                  <th>詳細</th><td><%= event.content %></td>
+                </tr>
+              </table>
+            </div>
+        </div>
+        <% end %>
+
+        <% user.movies.each do |movie| %>
+        <p>投稿動画</p>
+        <%= link_to "編集", edit_movie_path(movie.id) %>
+        <div class="user_index_movie col-lg-12">
+          <div class="col-xs-12 col-md-4">
+            <%= video_tag movie.icon.url, controls: true, autobuffer: true %>
+          </div>
+          <div class="user_table">
+            <table>
+              <tr>
+                <th>タイトル</th><td><%= movie.title %></td>
+              </tr>
+              <tr>
+                <th>内容</th><td><%= movie.content %></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+        <% end %>
+
       <% end %>
-    </tr>
-  <% end %>
-</table>
+    <% end %>
+  </div>
+</div>
