--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -50,9 +50,9 @@
       </div>
       <% unless @event.user_id == current_user.id %>
         <% if @favorite_event.present? %>
-          <%= link_to 'お気に入り解除する', favorite_event_path(id: @favorite_event.id), method: :delete, class: 'btn btn-danger' %>
+          <%= link_to '参加キャンセル', favorite_event_path(id: @favorite_event.id), method: :delete, class: 'btn btn-danger' %>
         <% else %>
-          <%= link_to 'お気に入りする', favorite_events_path(event_id: @event.id), method: :post, class: 'btn btn-primary' %>
+          <%= link_to '参加する', favorite_events_path(event_id: @event.id), method: :post, class: 'btn btn-primary' %>
         <% end %>
       <% end %>
     </div>
