--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,9 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">
-        <img src="/assets/下あご付きドクロアイコン.jpeg" width="30" height="30" class="d-inline-block align-top" alt="">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand">
+        <img src="/assets/s512_f_event_75_0bg.png" width="30" height="30" class="d-inline-block align-top" alt="">
         みんなでオカルト
         </a>
 
