--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3>周辺心霊マップ</h3>
+  <h4>周辺心霊マップ</h4>
   <div id="gmap" style="height:400px"></div> <!-- 地図を表示する領域 -->
 </div>
 
@@ -95,26 +95,31 @@ function initMap() {
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnqmYC6AIMWBOAv8WcT51MO9pHnfTcj4M&callback=initMap" async defer></script><!-- YOUR_API_KEYの部分は取得した APIキーで置き換えます -->
 
 <div class="container">
-  <div class="row">
-    <div class="map_index">
-      <h4>心霊スポット一覧</h4>
-      <table>
-        <tr>
-          <th>地名</th>
-          <th>住所</th>
-          <th>恐怖度</th>
-        </tr>
-      <% @maps.each do |map| %>
-        <tr>
-          <td><%= map.name %></td>
-          <td><%= map.address %></td>
-          <td><%= map.horror_level %></td>
-          <td><%= link_to '詳細', map_path(map.id) %></td>
-          <td><%= link_to "編集", edit_map_path(map.id) %></td>
-          <td><%= link_to '削除', map_path(map.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
-        </tr>
-      <% end %>
-      </table>
+  <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
+    <div class="card">
+      <div class="card-header" role="tab" id="headingOne">
+        <h5 class="mb-0">
+          <a class="text-body d-block p-3 m-n3" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne"><p>心霊スポット一覧▼</p></a>
+        </h5>
+      </div>
+      <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+        <div class="map_index card-body">
+          <table>
+            <tr>
+              <th>地名</th>
+              <th>住所</th>
+              <th>恐怖度</th>
+            </tr>
+          <% @maps.each do |map| %>
+            <tr>
+              <td><%= link_to map.name, map_path(map.id) %></td>
+              <td><%= map.address %></td>
+              <td class="horror_level"><%= map.horror_level %></td>
+            </tr>
+          <% end %>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -126,7 +131,7 @@ function initMap() {
       <% @events.each do |event| %>
       <div class="map_each_event col-xs-12 col-md-6 col-lg-4">
         <%= link_to image_tag(event.icon.url), event_path(event.id) %>
-        <%= event.title %>
+        <p><%= event.title %></p>
       </div>
       <% end %>
     </div>
