--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -63,7 +63,7 @@
                   <th>詳細</th><td><%= event.content %></td>
                 </tr>
                 <tr>
-                  <th></th><td><%= link_to "編集", edit_event_path(event.id) %></td>
+                  <th></th><td><%= link_to "編集", edit_event_path(event.id) %><%= link_to '削除', event_path(event.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
                 </tr>
               </table>
             </div>
@@ -87,7 +87,7 @@
                 <th>内容</th><td><%= movie.content %></td>
               </tr>
               <tr>
-                <th></th><td><%= link_to "編集", edit_movie_path(movie.id) %></td>
+                <th></th><td><%= link_to "編集", edit_movie_path(movie.id) %><%= link_to '削除', movie_path(movie.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
               </tr>
             </table>
           </div>
