--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -48,12 +48,16 @@
             </tr>
         </table>
       </div>
-      <% unless @event.user_id == current_user.id %>
-        <% if @favorite_event.present? %>
-          <%= link_to '参加キャンセル', favorite_event_path(id: @favorite_event.id), method: :delete, class: 'btn btn-danger' %>
-        <% else %>
-          <%= link_to '参加する', favorite_events_path(event_id: @event.id), method: :post, class: 'btn btn-primary' %>
+      <% if user_signed_in? %>
+        <% unless @event.user_id == current_user.id %>
+          <% if @favorite_event.present? %>
+            <%= link_to '参加キャンセル', favorite_event_path(id: @favorite_event.id), method: :delete, class: 'btn btn-danger' %>
+          <% else %>
+            <%= link_to '参加する', favorite_events_path(event_id: @event.id), method: :post, class: 'btn btn-primary' %>
+          <% end %>
         <% end %>
+      <% else %>
+        <%= link_to '参加する', new_user_session_path, class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
