--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,6 +1,9 @@
 <h1>動画一覧</h1>
 <div class="container">
   <div class="row">
+    <div class="new_movie col-lg-12">
+      <%= link_to '動画投稿', new_movie_path %>
+    </div>
     <div class="movie_index">
       <% @movies.each do |movie| %>
       <div class="each_movie col-xs-12 col-md-6 col-lg-4">
