--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -16,7 +16,7 @@
               <td><%= experience.title %></td>
               <td><%= experience.outline %></td>
               <td><%= experience.watches.count %></td>
-              <td><%= link_to '詳細', experience_path(experience.id) %><%= link_to "編集", edit_experience_path(experience.id) %><%= link_to '削除', experience_path(experience.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+              <td><%= link_to '詳細', experience_path(experience.id) %></td>
             </tr>
           <% end %>
         <% end %>
@@ -37,7 +37,7 @@
               <td><%= experience.title %></td>
               <td><%= experience.outline %></td>
               <td><%= experience.number_of_incident %></td>
-              <td><%= link_to '詳細', experience_path(experience.id) %><%= link_to "編集", edit_experience_path(experience.id) %><%= link_to '削除', experience_path(experience.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+              <td><%= link_to '詳細', experience_path(experience.id) %></td>
             </tr>
           <% end %>
         <% end %>
@@ -58,7 +58,7 @@
               <td><%= experience.title %></td>
               <td><%= experience.outline %></td>
               <td><%= experience.number_of_incident %></td>
-              <td><%= link_to '詳細', experience_path(experience.id) %><%= link_to "編集", edit_experience_path(experience.id) %><%= link_to '削除', experience_path(experience.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></td>
+              <td><%= link_to '詳細', experience_path(experience.id) %></td>
             </tr>
           <% end %>
         <% end %>
