--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,18 @@
 <div class="container">
   <div class="row">
+    <%= search_form_for @q do |form| %>
+      <div class="event_search form-group row">
+        <%= form.label :address_cont, "開催地", class: "col-sm-2 col-form-label" %>
+        <%= form.search_field :address_cont, class: "form-control col-sm-4" %>
+      </div>
+      <div class="event_search form-group row">
+        <%= form.label :day_time_at_gteq, "開催日時", class: "col-sm-2 col-form-label" %>
+        <%= form.search_field :day_time_at_gteq, class: "form-control col-sm-4" %>
+      </div>
+      <div class="form-group">
+        <%= form.submit "検索" %>
+      </div>
+    <% end %>
     <div class="new_event col-lg-12">
       <%= link_to 'イベント投稿', new_event_path %>
     </div>
