--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,26 @@
   </div>
 
   <div class="field">
+    <%= f.label :sex %><br />
+    <%= f.text_field :sex  %>
+  </div>
+
+  <div class="field">
+    <%= f.label :birthed_at %><br />
+    <%= f.date_select :birthed_at,{use_month_numbers: true, start_year:Time.now.year, end_year:1900, default: Date.today} %>
+  </div>
+
+  <div class="field">
+    <%= f.label :mobile_number %><br />
+    <%= f.text_field :mobile_number  %>
+  </div>
+
+  <div class="field">
+    <%= f.label :address %><br />
+    <%= f.text_field :address  %>
+  </div>
+
+  <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
@@ -25,6 +45,19 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
+
+  <div class="field">
+    <%= f.label :introduction %><br />
+    <%= f.text_area :introduction  %>
+  </div>
+
+  <div class="field">
+    <%= f.label :icon %>
+    <%= image_tag(@user.icon.url) if @user.icon && @user.icon.url %>
+    <%= f.file_field :icon %>
+    <%= f.hidden_field :icon_cache %>
+  </div>
+
 
   <div class="actions">
     <%= f.submit t('.sign_up') %>
