ユーザー登録時フォーマット修正&MAP一覧修正

--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -73,11 +73,11 @@ function initMap() {
  directionsRenderer.setMap(map);
 
  // ルートを取得するリクエスト
- var request = {
-   origin: "京急上大岡自動車学校",      // 出発地点の緯度経度
-   destination: "上大岡駅",   // 到着地点の緯度経度
-   travelMode: 'WALKING' //トラベルモード（歩き）
- };
+// var request = {
+//   origin: "京急上大岡自動車学校",      // 出発地点の緯度経度
+//   destination: "上大岡駅",   // 到着地点の緯度経度
+//   travelMode: 'WALKING' //トラベルモード（歩き）
+// };
 
  //DirectionsService のオブジェクトのメソッド route() にリクエストを渡し、
  //コールバック関数で結果を setDirections(result) で directionsRenderer にセットして表示
