ユーザー登録フォーム&バリデーション種検索フォーム&コメント機能修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,13 @@
  *= require_tree .
  *= require_self
  */
+ @import "font-awesome";
+ @import "tempusdominus-bootstrap-4.css";
  @import "bootstrap";
+
+ .field {
+   margin-bottom: 20px;
+ }
 
  .navbar {
    background-color: #3a3f4f;
@@ -40,6 +46,10 @@ p, ol, ul, td, a {
 
 .horror_level {
   color: red;
+}
+
+.form-group table th {
+  width: 100px;
 }
 
  .map_index {
