--- a/app/views/movies/_form.html.erb
+++ b/app/views/movies/_form.html.erb
@@ -10,12 +10,12 @@
     </div>
   <% end %>
 
-  <div class="movie_title">
-    <%= form.label :title %>
+  <div class="field">
+    <%= form.label :title %><br>
     <%= form.text_field :title %>
   </div>
-  <div class="movie_content">
-    <%= form.label :content %>
+  <div class="field">
+    <%= form.label :content %><br>
     <%= form.text_field :content %>
   </div>
   <div class="field">
