--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,10 +35,10 @@
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <% if user_signed_in? %>
-              <%= link_to "マイページ", users_path %>
+              <%= link_to "マイページ", users_path, {class: "nav-link"} %>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
             <% else %>
-              <%= link_to "新規登録", new_user_registration_path %>
+              <%= link_to "新規登録", new_user_registration_path, {class: "nav-link"} %>
               <%= link_to "ログイン", new_user_session_path %>
             <% end %>
 
