--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -97,9 +97,19 @@ function initMap() {
 <div class="container">
   <%= search_form_for @q do |form| %>
     <div class="form-group row">
-      <%= form.label :address_cont, "心霊スポット住所検索", class: "col-sm-2 col-form-label" %>
-      <%= form.search_field :address_cont, class: "form-control col-sm-4" %>
-      <%= form.submit "検索" %>
+      <table>
+        <tr>
+          <th><%= form.label :address_cont, "住所検索" %></th><td><%= form.search_field :address_cont %></td>
+        </tr>
+        <tr>
+          <th><%= form.label :name_cont, "場所検索" %></th><td><span><%= form.radio_button :name_cont, '', {:checked => true} %>指定なし</span><span><%= form.radio_button :name_cont, 'トンネル' %>トンネル</span>
+        <span><%= form.radio_button :name_cont, '廃墟' %>廃墟</span>
+          <span><%= form.radio_button :name_cont, '病院' %>病院</span></td>
+        </tr>
+        <tr>
+          <th><%= form.submit "検索" %></th><td></td>
+        </tr>
+      </table>
     </div>
   <% end %>
   <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
