--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,45 +4,48 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label :name %>*<br />
     <%= f.text_field :name  %>
   </div>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :email %>*<br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <div style="font-size:11px;">*すべて半角で入力してください。</div>
   </div>
 
   <div class="field">
-    <%= f.label :sex %><br />
+    <%= f.label :sex %>*<br />
     <%= f.select :sex, [["男性", "男性"], ["女性", "女性"]], include_blank: "選択して下さい"   %>
   </div>
 
   <div class="field">
-    <%= f.label :birthed_at %><br />
+    <%= f.label :birthed_at %>*<br />
     <%= f.date_select :birthed_at,{use_month_numbers: true, start_year:(Time.now.year - 1), end_year:1900, default: Date.today} %>
   </div>
 
   <div class="field">
-    <%= f.label :mobile_number %><br />
+    <%= f.label :mobile_number %>*<br />
     <%= f.text_field :mobile_number  %>
+    <div style="font-size:11px;">*数字でハイフンなし（すべて半角）で入力してください。</div>
   </div>
 
   <div class="field">
-    <%= f.label :address %><br />
+    <%= f.label :address %>*<br />
     <%= f.select :address, [["北海道", "北海道"], ["青森県", "青森県"], ["岩手県", "岩手県"], ["宮城県", "宮城県"], ["秋田県", "秋田県"], ["山形県", "山形県"], ["福島県", "福島県"], ["茨城県", "茨城県"], ["栃木県", "栃木県"], ["群馬県", "群馬県"], ["埼玉県", "埼玉県"], ["千葉県", "千葉県"], ["東京都", "東京都"], ["神奈川県", "神奈川県"], ["新潟県", "新潟県"], ["富山県", "富山県"], ["石川県", "石川県"], ["福井県", "福井県"], ["山梨県", "山梨県"], ["長野県", "長野県"], ["岐阜県", "岐阜県"], ["静岡県", "静岡県"], ["愛知県", "愛知県"], ["三重県", "三重県"], ["滋賀県", "滋賀県"], ["京都府", "京都府"], ["大阪府", "大阪府"], ["兵庫県", "兵庫県"], ["奈良県", "奈良県"], ["和歌山県", "和歌山県"], ["鳥取県", "鳥取県"], ["島根県", "島根県"], ["岡山県", "岡山県"], ["広島県", "広島県"], ["山口県", "山口県"], ["徳島県", "徳島県"], ["香川県", "香川県"], ["愛媛県", "愛媛県"], ["高知県", "高知県"], ["福岡県", "福岡県"], ["佐賀県", "佐賀県"], ["長崎県", "長崎県"], ["熊本県", "熊本県"], ["大分県", "大分県"], ["宮崎県", "宮崎県"], ["鹿児島県", "鹿児島県"], ["沖縄県", "沖縄県"]], include_blank: "選択して下さい"   %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :password %>*
     <% if @minimum_password_length %>
     <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
+    <div style="font-size:11px;">* 英数字で（すべて半角）で入力してください。</div>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation %>*<br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -52,8 +55,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :icon %>
-    <%= image_tag(@user.icon.url) if @user.icon && @user.icon.url %>
+    <%= f.label :icon %>*
+    <%= image_tag(@user.icon.url) if @user.icon && @user.icon.url %><br>
     <%= f.file_field :icon %>
     <%= f.hidden_field :icon_cache %>
   </div>
