--- a/app/views/experiences/index.html.erb
+++ b/app/views/experiences/index.html.erb
@@ -36,7 +36,7 @@
             <tr>
               <td><%= experience.title %></td>
               <td><%= experience.outline %></td>
-              <td><%= experience.number_of_incident %></td>
+              <td><%= experience.watches.count %></td>
               <td><%= link_to '詳細', experience_path(experience.id), class: 'btn btn-light btn-sm' %></td>
             </tr>
           <% end %>
@@ -57,7 +57,7 @@
             <tr>
               <td><%= experience.title %></td>
               <td><%= experience.outline %></td>
-              <td><%= experience.number_of_incident %></td>
+              <td><%= experience.watches.count %></td>
               <td><%= link_to '詳細', experience_path(experience.id), class: 'btn btn-light btn-sm' %></td>
             </tr>
           <% end %>
