--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,10 +7,10 @@
       </div>
       <div class="event_search form-group row">
         <%= form.label :day_time_at_gteq, "開催日", class: "col-sm-2 col-form-label" %>
-        <%= form.date_select :day_time_at_gteq, {use_month_numbers: true, start_year: (Date.today).year, default: Date.today} %>
+        <%= form.date_select :day_time_at_gteq, {use_month_numbers: true, start_year: (Date.today).year, include_blank: true } %>
 
         <%= form.label :day_time_at_gteq, "〜", class: "col-form-label" %>
-        <%= form.date_select :day_time_at_lteq, {use_month_numbers: true, start_year: (Date.today).year, default: Date.today} %>
+        <%= form.date_select :day_time_at_lteq, {use_month_numbers: true, start_year: (Date.today).year, include_blank: true } %>
       </div>
       <div class="form-group">
         <%= form.submit "検索" %>
