レイアウト& Rspec修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,7 +3,7 @@
     <% @users.each do |user| %>
       <% if user == current_user %>
       <p>プロフィール</p>
-      <%= link_to "編集", edit_user_path(user.id) %>
+      <%= link_to "編集", edit_user_registration_path(user.id) %>
         <div class="user_index col-lg-12">
           <div class="col-xs-12 col-md-4">
             <%= image_tag(user.icon.url) if user.icon && user.icon.url %>
