--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -48,6 +48,12 @@
     <%= form.label :introduction %>
     <%= form.text_field :introduction %>
   </div>
+
+  <div class="field">
+    <%= form.label :password %>
+    <%= form.text_field :password %>
+  </div>
+
   <%= form.submit %>
 <% end %>
 
