google mapに心霊スポット地点登録

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,11 +20,11 @@
       <%= link_to 'イベント投稿', new_event_path %>
     </div>
     <% @events.each do |event| %>
-      <div class="event_index col-lg-12">
-        <div class="event_index_icon col-xs-12 col-md-4">
+      <div class="event_index col-sm-12">
+        <div class="event_index_icon col-sm-12 col-md-6 col-lg-4">
           <%= image_tag(event.icon.url) if event.icon && event.icon.url %>
         </div>
-        <div class="event_index_table">
+        <div class="event_index_table col-sm-12 col-md-6 col-lg-8">
           <table>
             <tr>
               <th>タイトル</th><td>:<%= event.title %></td>
