--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,16 +12,18 @@
 
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand">
-        <img src="/assets/s512_f_event_75_0bg.png" width="30" height="30" class="d-inline-block align-top" alt="">
         みんなでオカルト
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        <div class="collapse navbar-collapse" id="Navber">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <%= link_to "トップ", maps_path, {class:"nav-link"} %>
+            <li class="nav-item active">
+              <%= link_to "トップ", maps_path, class:"nav-link", style: "color: #c1c2c7" %>
             </li>
             <li class="nav-item">
               <%= link_to "イベント", events_path, {class:"nav-link"} %>
@@ -41,7 +43,6 @@
               <%= link_to "新規登録", new_user_registration_path, {class: "nav-link"} %>
               <%= link_to "ログイン", new_user_session_path %>
             <% end %>
-
           </form>
         </div>
       </nav>
