--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,7 @@
 
  body {
   background-color: #3a3f4f;
-  color: white;
+  color: #c1c2c7;
   margin: 0 33px 0 33px;
   font-family: tahoma, verdana, arial, helvetica, sans-serif;
 }
@@ -36,11 +36,28 @@ p, ol, ul, td, a {
   font-family: tahoma, verdana, arial, helvetica, sans-serif;
   font-size: 17px;
   line-height: 18px;
-  color: white;
+  color: #c1c2c7;
+}
+
+img {
+  object-fit: cover;
+  height: 250px;
+  width: 100%;
+}
+
+video  {
+  object-fit: cover;
+  height: 250px;
+  width: 100%;
+}
+
+.navbar {
+  border-bottom: solid 1px #d4d8db;
+  margin-bottom: 30px;
 }
 
  .gm-style-iw-d {
-   color: gray;
+   color: #c1c2c7;
  }
 
 #gmap {
@@ -48,16 +65,17 @@ p, ol, ul, td, a {
 }
 
 .horror_level {
-  color: red;
+  color: #c1c2c7;
+}
+
+.form-group table {
+
 }
 
 .form-group table th {
   width: 100px;
 }
 
- .map_index {
-   margin-top: 50px;
- }
 
  .event_search {
    width: 100%;
@@ -70,26 +88,47 @@ p, ol, ul, td, a {
 
  .event_index {
    border-top: solid 1px #d4d8db;
-   padding: 15px 0px 15px 0px;
+   padding: 30px 0px 30px 0px;
  }
 
- .event_index_icon img {
-   height: 250px;
-   width: 100%;
+ .event_index_icon {
    float: left;
-   margin-right: 20px;
+ }
+
+ .event_index_table {
+   float: left;
  }
 
  .event_index table th {
    width: 100px;
  }
 
- .event_show_icon img {
-   height: 250px;
-   width: 100%;
+ .event_show_icon {
    float: left;
-   margin-right: 20px;
-   margin-top: 15px;
+   margin: 20px 0 20px 0;
+ }
+
+ .event_show_table {
+   float: left;
+   margin: 20px 0 20px 0;
+ }
+
+ .event_show_table th {
+   width: 100px;
+ }
+
+ .event_show_usericon {
+   float: left;
+   margin: 20px 0 20px 0;
+ }
+
+ .event_show_usertable {
+   float: left;
+   margin: 20px 0 20px 0;
+ }
+
+ .event_show_usertable th {
+   width: 100px;
  }
 
  .new_movie {
@@ -105,11 +144,6 @@ p, ol, ul, td, a {
 
 .each_movie {
   float: left;
-  color: gray;
-}
-
-.each_movie a{
-  color: gray;
 }
 
 .movie-show video {
@@ -123,8 +157,6 @@ p, ol, ul, td, a {
 }
 
 .user_index img {
-  height: 200px;
-  width: 200px;
   float: left;
   margin-right: 20px;
 }
@@ -135,19 +167,18 @@ p, ol, ul, td, a {
 
 .user_event {
   border: solid 1px #d4d8db;
-  height: auto;
+  height: 100%;
 }
 
 .user_index_event {
-  padding: 30px;
-  height: 50%;
+  padding: 30px 0 30px 0;
+  margin-bottom: 50px;
 }
 
 .user_index_event img {
-  height: 200px;
-  width: 100%;
   float: left;
   margin-right: 20px;
+  margin-bottom: 30px;
 }
 
 .user_index_event table th {
@@ -160,19 +191,19 @@ p, ol, ul, td, a {
 }
 
 .user_index_movie {
-  padding: 30px;
-  height: 50%;
+  padding: 30px 0 30px 0;
+  margin-bottom: 50px;
 }
 
 .user_index_movie video {
-  height: 200px;
-  width: 100%;
   float: left;
   margin-right: 20px;
+  margin-bottom: 30px;
 }
 
 .user_index_movie table {
   margin-top: 20px;
+  margin-bottom: 100px;
 }
 
 .user_index_movie table th {
@@ -209,8 +240,6 @@ p, ol, ul, td, a {
 }
 
 .experience_show_icon img {
-  height: 250px;
-  width: 100%;
   float: left;
   margin-right: 20px;
   margin-top: 15px;
@@ -220,34 +249,41 @@ p, ol, ul, td, a {
   margin-top: 50px;
 }
 
-.map_event_index img {
-  height: 200px;
-  width: 100%;
+.map_each_evnet img {
   margin-right: 20px;
 }
 
 .map_each_event {
   float: left;
   color: gray;
+  margin-bottom: 50px;
 }
 
 .map_movie_index {
   margin-top: 50px;
 }
 
-.map_movie_index video {
-  height: 300px;
-  width: 100%;
+.map_each_movie video {
   margin-right: 20px;
 }
 
 .map_each_movie {
   float: left;
   color: gray;
+  margin-bottom: 50px;
 }
 
-.map_each_movie p {
-  margin-top: -50px;
+.map_icon_show {
+  float: left;
+  margin-bottom: 50px;
+}
+
+.map_table_show {
+  float: left;
+}
+
+.map_table_show th {
+  width: 100px;
 }
 
 .card {
