--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -5,6 +5,57 @@
 
 
 <script>
+var map;
+var marker = [];
+var infoWindow = [];
+var markerData = [ // マーカーを立てる場所名・緯度・経度
+  {
+    name: '緑ヶ丘霊園<br><a href="/maps/11" target="_blank">詳細</a>',
+    lat: 35.603717,
+    lng: 139.593120,
+ }, {
+    name: '打越橋<br><a href="/maps/7" target="_blank">詳細</a>',
+    lat: 35.433339,
+    lng: 139.638774,
+ }, {
+    name: '洋光台マンション(廃墟)<br><a href="/maps/6" target="_blank">詳細</a>',
+    lat: 35.376156,
+    lng: 139.589721,
+ }, {
+    name: '山神トンネル<br><a href="/maps/8" target="_blank">詳細</a>',
+    lat: 35.454837,
+    lng: 139.266676,
+ }, {
+    name: 'ビジネスホテルトロピカル(廃墟)<br><a href="/maps/9" target="_blank">詳細</a>',
+    lat: 35.517775,
+    lng: 139.593444,
+ }, {
+    name: 'ホテルすかいらぶ(廃墟)<br><a href="/maps/10" target="_blank">詳細</a>',
+    lat: 35.383364,
+    lng: 139.254930,
+ }, {
+    name: 'たっちゃん池（宅部池）<br><a href="/maps/4" target="_blank">詳細</a>',
+    lat: 35.762092,
+    lng: 139.441812,
+ }, {
+    name: '八王子トンネル<br><a href="/maps/5" target="_blank">詳細</a>',
+    lat: 35.612229,
+    lng: 139.265610,
+ }, {
+    name: 'NTT上野ビル<br><a href="/maps/2" target="_blank">詳細</a>',
+    lat: 35.707571,
+    lng: 139.775878,
+ }, {
+    name: '白金トンネル<br><a href="/maps/3" target="_blank">詳細</a>',
+    lat: 35.676124,
+    lng: 139.711532,
+ }, {
+    name: '番町皿屋敷（お菊の皿）<br><a href="/maps/1" target="_blank">詳細</a>',
+    lat: 35.690003,
+    lng: 139.734104
+ }
+];
+
 function initMap() {
   var target = document.getElementById('gmap');
   //マップを生成して表示
@@ -45,16 +96,16 @@ function initMap() {
 
     var myCircle = new google.maps.Circle({
     strokeColor: '#0088ff',
-    strokeOpacity: 0.8,
-    strokeWeight: 2,
+    strokeOpacity: '0.8',
+    strokeWeight: '2',
     fillColor: '#0088ff',
-    fillOpacity: 0.35,
+    fillOpacity: '0.35',
     map: map,
     center: pos,
     radius: 500
   });
 
-  }, function() {  //位置情報の取得をユーザーがブロックした場合のコールバック
+}, function() {  //位置情報の取得をユーザーがブロックした場合のコールバック
     //情報ウィンドウの位置をマップの中心位置に指定
     infoWindow.setPosition(map.getCenter());
     //情報ウィンドウのコンテンツを設定
@@ -63,32 +114,27 @@ function initMap() {
     infoWindow.open(map);
   });
 
-  //DirectionsService のオブジェクトを生成
- var directionsService = new google.maps.DirectionsService();
+    //マーカー毎の処理
+  for (var i = 0; i < markerData.length; i++) {
+         markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']}); //緯度経度のデータ作成
+         marker[i] = new google.maps.Marker({ //マーカーの追加
+          position: markerLatLng, //マーカーを立てる位置を指定
+             map: map //マーカーを立てる地図を指定
+        });
 
- //DirectionsRenderer のオブジェクトを生成
- var directionsRenderer = new google.maps.DirectionsRenderer();
+      infoWindow[i] = new google.maps.InfoWindow({ //吹き出しの追加
+          content: '<div class="sample">' + markerData[i]['name'] + '</div>' // 吹き出しに表示する内容
+        });
 
- //directionsRenderer と地図を紐付け
- directionsRenderer.setMap(map);
+      markerEvent(i); //マーカーにクリックイベントを追加
+  }
 
- // ルートを取得するリクエスト
-// var request = {
-//   origin: "京急上大岡自動車学校",      // 出発地点の緯度経度
-//   destination: "上大岡駅",   // 到着地点の緯度経度
-//   travelMode: 'WALKING' //トラベルモード（歩き）
-// };
-
- //DirectionsService のオブジェクトのメソッド route() にリクエストを渡し、
- //コールバック関数で結果を setDirections(result) で directionsRenderer にセットして表示
- directionsService.route(request, function(result, status) {
-   //ステータスがOKの場合、
-   if (status === 'OK') {
-     directionsRenderer.setDirections(result); //取得したルート（結果：result）をセット
-   }else{
-     alert("取得できませんでした：" + status);
-   }
- });
+    //マーカーにクリックイベントを追加
+  function markerEvent(i) {
+      marker[i].addListener('click', function() { //マーカーをクリックしたとき
+        infoWindow[i].open(map, marker[i]); //吹き出しの表示
+    });
+  }
 }
 
 </script>
@@ -112,41 +158,37 @@ function initMap() {
       </table>
     </div>
   <% end %>
-  <div class="accordion" id="accordion" role="tablist" aria-multiselectable="true">
-    <div class="card">
-      <div class="card-header" role="tab" id="headingOne">
-        <h5 class="mb-0">
-          <a class="text-body d-block p-3 m-n3" data-toggle="collapse" href="#collapseOne" role="button" aria-expanded="true" aria-controls="collapseOne"><p>心霊スポット一覧▼</p></a>
-        </h5>
-      </div>
-      <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-        <div class="map_index card-body">
-          <table>
-            <tr>
-              <th>地名</th>
-              <th>住所</th>
-              <th>恐怖度</th>
-            </tr>
-          <% @maps.each do |map| %>
-            <tr>
-              <td><%= link_to map.name, map_path(map.id) %></td>
-              <td><%= map.address %></td>
-              <td class="horror_level"><%= map.horror_level %></td>
-            </tr>
-          <% end %>
-          </table>
-        </div>
-      </div>
+  <p>
+    <a class="btn btn-light row" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+      心霊スポット一覧
+    </a>
+  </p>
+  <div class="collapse row" id="collapseExample">
+    <div class="card card-body">
+      <table>
+        <tr>
+          <th>地名</th>
+          <th>住所</th>
+          <th>恐怖度</th>
+        </tr>
+      <% @maps.each do |map| %>
+        <tr>
+          <td><%= link_to map.name, map_path(map.id) %></td>
+          <td><%= map.address %></td>
+          <td class="horror_level"><%= map.horror_level %></td>
+        </tr>
+      <% end %>
+      </table>
     </div>
   </div>
 </div>
 
 <div class="container">
   <div class="row">
-    <div class="map_event_index">
+    <div class="map_event_index  col-sm-12">
       <h4>新着イベント</h4>
       <% @events.each do |event| %>
-      <div class="map_each_event col-xs-12 col-md-6 col-lg-4">
+      <div class="map_each_event col-sm-12 col-md-6 col-lg-4">
         <%= link_to image_tag(event.icon.url), event_path(event.id) %>
         <p><%= event.title %></p>
       </div>
@@ -157,10 +199,10 @@ function initMap() {
 
 <div class="container">
   <div class="row">
-    <div class="map_movie_index">
+    <div class="map_movie_index col-sm-12">
       <h4>新着動画</h4>
       <% @movies.each do |movie| %>
-      <div class="map_each_movie col-xs-12 col-md-6 col-lg-4">
+      <div class="map_each_movie col-sm-12 col-md-6 col-lg-4">
         <%= link_to video_tag(movie.icon.url), movie_path(movie.id) %>
         <p><%= movie.title %></p>
       </div>
