--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -35,11 +35,11 @@
           </div>
         </div>
 
-        <p>投稿イベント</p>
-        <div class="user_event col-xs-12 col-md-12 col-lg-12">
+      <p>投稿イベント</p>
+        <div class="user_event col-sm-12">
           <% user.events.each do |event| %>
-          <div class="user_index_event col-lg-12">
-            <div class="col-xs-12 col-md-4">
+          <div class="user_index_event col-sm-12">
+            <div class="col-sm-12 col-md-4">
               <%= image_tag(event.icon.url) if event.icon && event.icon.url %>
             </div>
             <div class="user_table">
@@ -71,6 +71,7 @@
         <% end %>
       </div>
 
+
       <p>投稿動画</p>
       <div class="user_movie col-xs-12 col-md-12 col-lg-12">
         <% user.movies.each do |movie| %>
@@ -92,7 +93,7 @@
             </table>
           </div>
         </div>
-        <% end %>
+      <% end %>
       </div>
 
       <% end %>
